# devops-training

./: .env.example  README.md  pyproject.toml
deploy/.github/workflows/: ci-cd.yml
deploy/docker/: .dockerignore  Dockerfile
deploy/gcp/: cloud-run.yaml  vm-startup-script.sh
src/: app.py
src/config/: settings.py
tests/: conftest.py  test_app.py
